Fixing mobile layout issues

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 768px) {
+  .section-header .title {
+    font-size: 2em;
+  }
+  .section-header .subtitle {
+    font-size: 1.5em;
+  }
+}
+
 .section-header .button {
   margin-bottom: 0;
 }
